# FreeTrade

./: Cargo.toml  README.md  index.html
.github/workflows/: release.yaml
src/: config.rs  main.rs  resources.rs
src/component/: mod.rs
src/state/: game.rs
src/system/: mod.rs
