[package]
name = "freetrade"
version = "0.1.0"
authors = ["Tom Streller <tom.streller@tutti.ch>"]
edition = "2018"

[dependencies]
env_logger = "0.7"
ggez = "0.5"
legion = "0.3"
log = "0.4"
rand = "0.7"
toml = "0.5"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
zip = "0.5"
walkdir = "2.3"